objects/CN_CPP_Fields_Check__mdt.object
<CustomObject>
    <description>Check the Competitor Product Price for Customer field</description>
    <fields>
        <fullName>CN_Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CN_Is_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CN_CPP_Fields_Check</label>
    <pluralLabel>CN_CPP_Fields_Check</pluralLabel>
</CustomObject>